@@ -1,3 +1,15 @@
+Tue Aug 24 08:45:41 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+        * tao/Connection_Handler.h:
+        * tao/GIOP_Message_Base.cpp:
+        * tao/Transport_Connector.cpp:
+        * tao/IIOP_Acceptor.cpp:
+        * tao/IIOP_Connection_Handler.cpp:
+        * tao/Connection_Handler.cpp:
+        * tao/Transport.cpp:
+          First set of selected implementations from patches in Bugzilla
+          3652.
+
 Mon Aug 23 19:37:45 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * tao/PortableServer/Active_Object_Map.cpp:
